[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/blue/alienBlue.png" type="Texture" id=2]
[ext_resource path="res://sprites/blue/alienBlue_walk1.png" type="Texture" id=3]
[ext_resource path="res://sprites/blue/alienBlue_walk2.png" type="Texture" id=4]
[ext_resource path="res://sound/win.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/hurt.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.1652

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18.7758 )
shape = SubResource( 2 )

[node name="Position2DFriend" type="Position2D" parent="."]
position = Vector2( -31.1063, -31.2086 )

[node name="SFX" type="Node" parent="."]

[node name="ObjectiveCompletedSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="HurtSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
